# PassXMP

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
scripts/: build_mac.sh  build_windows.bat
src/: app.py  main.py
src/config/: __init__.py  config_manager.py  path_detector.py
src/core/: __init__.py  color_transforms.py  cube_exporter.py  file_registry.py  hald_generator.py  sync_engine.py  xmp_parser.py
src/gui/: __init__.py  _style.py  main_window.py  presets_view.py  settings_view.py  settings_window.py  setup_window.py  tray_icon.py
src/gui/widgets/: live_dot.py  progress_footer.py  status_cell.py
src/utils/: logger.py
src/watcher/: __init__.py  folder_watcher.py  mirror.py
tests/: test_color_transforms.py  test_config_manager.py  test_cube_exporter.py  test_file_registry.py  test_folder_watcher.py  test_mirror.py  test_xmp_parser.py
tests/fixtures/sample_presets/: color_grading.xmp  minimal.xmp  warm_film.xmp
tests/gui/: conftest.py  test_app_smoke.py  test_live_dot.py  test_main_window.py  test_presets_view.py  test_progress_footer.py  test_settings_view.py  test_status_cell.py
